fixed overflow of main title

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -97,11 +97,29 @@ body {
   flex-direction: column; 
 }
 .title .main-title{
-  font-size: 6rem;
+  font-size: 7vw;
 }
-.title .tw{
-  font-size: 2rem;
+.typewriter h1{
+  font-size: 2.6vw;
 }
+/* @media (max-width: 1100px) {
+  .title .main-title {
+    font-size: 4rem; 
+  }
+
+  .typewriter h1 {
+    font-size: 1.8rem; 
+  }
+}
+@media (max-width: 750px) {
+  .title .main-title {
+    font-size: 3rem; 
+  }
+
+  .typewriter h1 {
+    font-size: 1.4rem; 
+  }
+} */
 .mainimg {
   position: absolute;
   top: 50%;
